[project]
name = "py-vault-adb-wrapper"
version = "0.1.0"
description = "A Python wrapper for Android Debug Bridge (ADB) operations with JSON-based action configuration."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "adbutils>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "PIE", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
